Обновление config.py

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,16 @@
+# === Виртуальное окружение Python ===
 venv/
+
+# === Кэш и временные файлы Python ===
 __pycache__/
 *.pyc
+
+# === Логи ===
 logs/
+
+# === Локальные конфиги (не пушим в репу) ===
+config.py
 .env
+
+# === Системный мусор ===
 .DS_Store
